--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ before_install:
   # C++14
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
+  # SFML
+  - sudo apt-add-repository ppa:sonkun/sfml-development -y
+  - sudo apt-get update -qq
   # Codecov
   - sudo pip install codecov
   # OCLint
@@ -19,8 +22,16 @@ before_install:
 install: 
   # C++14
   - sudo apt-get install -qq g++-5
+  # SFML
+  - sudo apt-get install libsfml-dev
   # Codecov
   - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-5 90
+
+# Start virtual X server, from https://docs.travis-ci.com/user/gui-and-headless-browsers/
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 
 script: 
   # Build and run the real program
