--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,10 @@ before_script:
   - sleep 3 # give xvfb some time to start
 
 script: 
+  # Build and run tests
+  - qmake AminoAcidFighterTest.pro
+  - make debug
+  - ./AminoAcidFighterTest
   # Build and run the real program
   - qmake AminoAcidFighter.pro
   - make
