--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-sudo: true
+sudo: require
 language: cpp
 compiler: gcc
+# dist: trusty # Qt5, from https://gist.github.com/jreese/6207161#gistcomment-1462109
 
-# Boost
 addons: 
   apt: 
     packages: libboost-all-dev
