--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ install:
   - sudo pip install codecov
   # OCLint
   - ./install_oclint
+  # For the virtual X server
+  - sudo apt-get install libxrandr-dev
 
 # Start virtual X server, from https://docs.travis-ci.com/user/gui-and-headless-browsers/
 before_script:
