--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,8 @@ script:
   # Call OCLint
   - ./do_oclint
   # SLOCcount
+  #   remove OCLint otherwise it will be counted as well
+  - rm -rf oclint-0.10.3
   - cd ..; sloccount --overhead 1 --personcost 22614 AminoAcidFighter; cd AminoAcidFighter
 
 after_success:
