--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ install:
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
   # SFML
   - sudo apt-get install libsfml-dev
+  # XRandR, else you get 'Failed to use the XRandR extension while trying to get the desktop video modes'
+  - sudo apt-get install libxrandr-dev
   # clang-tidy
   - sudo apt-get install -qq clang-3.8
   # cppcheck
