--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,23 @@
 language: cpp
-compiler: gcc
-dist: trusty
+dist: xenial
+compiler:
+  - gcc
+  # - clang 
 
 addons: 
   apt: 
     packages: libboost-all-dev
 
-before_install:
-  # C++14
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -qq
-
 install: 
-  # C++14
-  - sudo apt-get install -qq g++-5
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
+  # Qt5
+  - sudo apt-get install -qq qt5-qmake qt5-default
   # SFML
   - sudo apt-get install libsfml-dev
-  # XRandR, else you get 'Failed to use the XRandR extension while trying to get the desktop video modes'
-  - sudo apt-get install libxrandr-dev
   # clang-tidy
   - sudo apt-get install -qq clang-3.8
   # cppcheck
   - sudo apt-get install -qq cppcheck
   # Codecov
-  - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-5 90
   - sudo pip install codecov
   # OCLint
   - ./install_oclint
@@ -35,24 +28,21 @@ install:
   # SLOCcount
   - sudo apt-get install sloccount
 
-# Start virtual X server, from https://docs.travis-ci.com/user/gui-and-headless-browsers/
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+services:
+ - xvfb
 
 script: 
   # Game logic non-SFML tests
   - qmake AminoAcidFighterTest.pro
-  - make debug
+  - make --silent debug
   - ./AminoAcidFighterTest
   # Game logic SFML tests
   - qmake AminoAcidFighterSfmlTest.pro
-  - make debug
+  - make --silent debug
   - ./AminoAcidFighterSfmlTest
   # Build and run profile run
   - qmake AminoAcidFighter.pro
-  - make release
+  - make --silent release
   - time ./AminoAcidFighter --profile --no_music
   - gprof AminoAcidFighter > gprof.log
   - head gprof.log -n 100
