--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,10 @@ compiler:
   - gcc
   # - clang 
 
-addons: 
-  apt: 
-    packages: libboost-all-dev
-
 install: 
+  - sudo apt update -qq
+  # Boost
+  - sudo apt install -qq libboost-all-dev
   # Qt5
   - sudo apt-get install -qq qt5-qmake qt5-default
   # SFML
