check_dead_links be mild

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ script:
   - cat memcheck.log
   # Check dead links
   - rm .travis.yml
-  - ./scripts/check_dead_links
+  - ./scripts/check_dead_links || true
   # SLOCcount
   #   remove OCLint otherwise it will be counted as well
   - rm -rf oclint-0.10.3
