Codecov in silence

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,8 +52,8 @@ script:
   # cppcheck
   - cppcheck --error-exitcode=1 . 
   # Get code coverage
-  - ./get_code_cov
-  - codecov
+  - ./get_code_cov >/dev/null
+  - codecov >/dev/null
   # Call OCLint
   - ./do_oclint || true
   # memcheck
