--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,9 @@ install:
   # SLOCcount
   - sudo apt-get install sloccount
   # Check dead links
-  - sudo apt-get install -qq npm
-  - npm config set strict-ssl false
-  - sudo npm install -g markdown-link-check
+  #- sudo apt-get install -qq npm
+  #- npm config set strict-ssl false
+  #- sudo npm install -g markdown-link-check
 
 services:
   - xvfb
@@ -59,9 +59,9 @@ script:
   # memcheck
   - valgrind --leak-check=full -v --show-reachable=yes --log-file=memcheck.log ./AminoAcidFighterTest
   - cat memcheck.log
-  # Check dead links
-  - rm .travis.yml
-  - ./scripts/check_dead_links || true
+  ## Check dead links
+  #- rm .travis.yml
+  #- ./scripts/check_dead_links || true
   # SLOCcount
   #   remove OCLint otherwise it will be counted as well
   - rm -rf oclint-0.10.3
